K8s/80-usermanager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventsapp-usermanager-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventsapp-usermanager-pods
  template:
    metadata:
      labels:
        app: eventsapp-usermanager-pods
    spec:
      containers:
        - name: usermanager
          image: callegra/userimage
          ports:
            - containerPort: 4444
