K8s/90-reservmanager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventsapp-reservmanager-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventsapp-reservmanager-pods
  template:
    metadata:
      labels:
        app: eventsapp-reservmanager-pods
    spec:
      containers:
        - name: reservmanager
          image: callegra/reservimage
          ports:
            - containerPort: 7777
