K8s/10-usermanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: eventsapp-usermysqldb-service
  labels:
    svc: eventsapp-usermysqldb
spec:
  selector:
    app: eventsapp-usermysqldb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
