K8s/25-eventmanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: eventsapp-eventmysqldb-service
  labels:
    svc: eventsapp-eventmysqldb
spec:
  selector:
    app: eventsapp-eventmysqldb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
