K8s/40-reservmanager-mysqldb-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: eventsapp-reservmysqldb-service
  labels:
    svc: eventsapp-reservmysqldb
spec:
  selector:
    app: eventsapp-reservmysqldb-pods
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
