K8s/45-usermanager-service.yaml
apiVersion : v1
kind: Service
metadata:
  name: eventsapp-usermanager-service
  labels:
    svc: eventsapp-usermanager
spec:
  selector:
    app: eventsapp-usermanager-pods
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 8080
